--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -101,7 +101,7 @@
                         </div>
                         <div class="d-flex justify-content-between mt-2">
                             <button class="btn btn-outline-info btn-sm" data-bs-toggle="modal" data-bs-target="#infoModalGinvexpress">Info</button>
-                            <a href="https://ginvexpress.site" target="_blank" class="btn btn-outline-success btn-sm">Visit</a>
+                            <a href="https://ginvexpress.kelanach.xyz" target="_blank" class="btn btn-outline-success btn-sm">Visit</a>
                         </div>
                     </div>
                 </div>
