--- a/web/login.html
+++ b/web/login.html
@@ -1,46 +1,48 @@
 {{ template "components/_header" .}}
-<body>
-    <div class="login-card">
-        <div class="text-center mb-4">
-            <img src="/web/images/klan-sso-logo.png" alt="Logo Chat Nge-Chat" class="img-fluid" style="border-radius: 50%; max-width: 150px; height: auto;">
+<body class="min-h-screen bg-gradient-to-br from-blue-50 to-indigo-100 flex items-center justify-center p-4 font-sans">
+
+    <div class="max-w-md w-full bg-white rounded-2xl shadow-xl overflow-hidden">
+        <div class="p-8">
+            <div class="text-center mb-8">
+                <img src="/web/images/klan-sso-logo.png" alt="Klan SSO Logo" class="mx-auto h-24 w-24 rounded-full shadow-md border-4 border-white">
+                <h1 class="text-2xl font-bold text-gray-800 mt-4">Klan SSO</h1>
+                <div class="h-1 w-16 bg-blue-500 mx-auto mt-2 rounded-full"></div>
+                <h2 class="text-xl font-medium text-gray-600 mt-4">Login</h2>
+            </div>
+
+            <!-- Form Login with Tailwind -->
+            <form id="loginForm" class="space-y-6">
+                <!-- Input Username -->
+                <div>
+                    <label for="username" class="block text-sm font-medium text-gray-700 mb-1">Username</label>
+                    <input type="text" id="username" name="username" 
+                           class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-colors" 
+                           placeholder="Enter username" required autofocus>
+                </div>
+
+                <!-- Input Password -->
+                <div>
+                    <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Password</label>
+                    <input type="password" id="password" name="password" 
+                           class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-colors" 
+                           placeholder="Enter password" required>
+                </div>
+
+                <!-- Login Button -->
+                <button type="submit" 
+                        class="w-full py-3 px-4 bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:ring-blue-300 text-white font-medium rounded-lg transition-all duration-300 transform hover:-translate-y-0.5 hover:shadow-lg">
+                    Login
+                </button>
+            </form>
+
+            <!-- Link Register -->
+            <div class="mt-6 text-center">
+                <p class="text-gray-600">Don't have an account? <a href="/signup" class="text-blue-600 hover:text-blue-800 font-medium">Sign Up Here!</a></p>
+                <div class="mt-4 border-t border-gray-200 pt-4">
+                    <a href="/" class="text-blue-600 hover:text-blue-800 font-medium">SSO Dashboard Here!</a>
+                </div>
+            </div>
         </div>
-
-        <h1 class="text-center mb-4">Klan SSO</h1>
-        <hr>
-        <h2 class="text-center mb-4">Login</h2>
-
-        <!-- Form Login -->
-        <form id="loginForm">
-            <!-- Input Username -->
-            <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" id="username" name="username" class="form-control" placeholder="Enter username" required autofocus>
-            </div>
-
-            <!-- Input Password -->
-            <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" id="password" name="password" class="form-control" placeholder="Enter password" required>
-            </div>
-
-            <!-- Tombol Login -->
-            <button type="submit" class="btn btn-primary w-100">Login</button>
-        </form>
-
-        <!-- Link Register -->
-        <div class="footer-text">
-            <div>
-                Don't Have Account? <a href="/signup">Sign Up Here!</a>
-            </div>
-
-            <hr>
-
-            <div>
-                Go to <a href="/">SSO Dashboard Here!</a>
-            </div>
-            
-        </div>
-        
     </div>
 
     {{ template "components/_footer-script" . }}
