--- a/web/home.html
+++ b/web/home.html
@@ -240,6 +240,28 @@
                     <h3 class="text-xl font-semibold mb-3">Secure Implementation</h3>
                     <p class="text-slate-600">Built with security best practices to protect user data and prevent unauthorized access to applications.</p>
                 </div>
+                
+                <!-- Feature 5: WhatsApp-based MFA (NEW) -->
+                <div class="card p-8 hover:scale-105 lg:col-span-2 md:col-start-1" data-aos="fade-up" data-aos-delay="600">
+                    <div class="flex items-center justify-center w-14 h-14 rounded-full bg-green-100 text-green-600 mb-6">
+                        <i class="fab fa-whatsapp text-xl"></i>
+                    </div>
+                    <h3 class="text-xl font-semibold mb-3">WhatsApp-based MFA</h3>
+                    <p class="text-slate-600">Enhance your account security with Two-Factor Authentication via WhatsApp. When enabled, a verification code is sent to your phone for an additional layer of protection.</p>
+                    <div class="mt-4 flex items-center text-sm text-slate-500">
+                        <i class="fas fa-info-circle mr-2 text-blue-500"></i>
+                        <span>Currently optimized for Indonesian phone numbers</span>
+                    </div>
+                </div>
+                
+                <!-- Feature 6: Credit System -->
+                <div class="card p-8 hover:scale-105 lg:col-span-2" data-aos="fade-up" data-aos-delay="700">
+                    <div class="flex items-center justify-center w-14 h-14 rounded-full bg-blue-100 text-primary mb-6">
+                        <i class="fas fa-coins text-xl"></i>
+                    </div>
+                    <h3 class="text-xl font-semibold mb-3">Credit System</h3>
+                    <p class="text-slate-600">Track and manage credit usage across all integrated applications with automatic daily credit refreshes for AI-powered features.</p>
+                </div>
             </div>
         </div>
     </section>
